reposition social media buttons to prevent overlap

--- a/ckanext/pakistan/theme/resources/styles/pakistan.less
+++ b/ckanext/pakistan/theme/resources/styles/pakistan.less
@@ -1045,10 +1045,11 @@ div.notes {
 .social-facebook {
   position:relative;
   top:-5px;
+  right: 10px;
 }
 .social-twitter {
   position:relative;
-  right:-16px;
+  right: 5px;
 }
 
 .masthead .site-search input {
